assets/css/custom.css
@import url('dropdown.css');

:root {
  --wedrobebg1: #CBD4E4;
  --wedrobebg2: #3D5476;
  --wedrobebg3: #FFF;
}

* {
  margin: 0;
  padding: 0;
}

/* ---- 
Front End
---- */

.nomargin {
  margin: 0;
}

.custom-bg1 {
 background-color: #CBD4E4;
}

.custom-bg2 {
  background-color: #3D5476;
}
.custom-bg3 {
  background-color: #FFF;
}

.custom-bg-1 {
  background-color: var(--wedrobebg2);
}

.custom-fzise {
  font-weight: bold;
  font-family: sans-serif;
}

.custom-container {
  min-height: calc(100vh - 233px);
}

/* .custom-bg-1 {
  background-color: #6c757d;
 } */

.custom-break {
  white-space: break-spaces;
}

.logo-pos {
  /* border-radius: 4rem; */
  height: 6rem;
  position: absolute;
  margin-left: 50%;
  transform: translateX(-50%);
  padding-bottom: 2rem;
}

.logo-limit {
  max-width: 2rem;
  max-height: 2rem;
}

.logo-admin {
  position: relative;
  filter: invert(0.6);
}

.table-container {
  width: 100%;
  padding-right: 7.5rem;
}

.navbar-toggler {
  border: none;
  cursor: pointer;
}

.navbar-toggler .fa {
  color: var(--wedrobebg2);
  border-color: var(--wedrobebg2);
}

.navbar a {
  color: black;
  border-bottom: solid 3px #FFF;
  /* border-bottom-color: ; */
  border-bottom-color: var(--wedrobebg3);
}
.navbar a:hover {
  /* border-bottom: solid 3px --wedrobebg2; */
  border-bottom-color: var(--wedrobebg2);
  /* background-color: var(--wedrobebg2); */
  
  transition: all ease-out 300ms;
}

.navbar a:hover.custom-fsize {
  color: #FFF !important;
  transition: all ease-out 300ms;
}

.navbar-nav li:last-child {
  display: none;
}

.topbar {
  border-bottom: solid 0.3rem #444;
}

.topbar p {
  margin-bottom: 0;
}
.topbar a {
  text-decoration: none;
  /* color: #6c757d; */
  /* color: #FFF; */
  font-size: 14px;
}

/*  */
.produk-front {
  overflow-x: auto;
  display: flex;
  background-color: aqua;
}
.produk-front .card-produk {
  width: 18rem;
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  text-align: center;
}
.produk-front .card-produk .card-body {
  display: flex;
  flex-direction: column;
  padding: 0 0;
  margin-top: 25px;
}
/*  */

.footer .foot-item a {
  padding: 5px;
  margin: 1px;
  border-radius: 2px;
  color: white;
  text-decoration: none;
  transition: all ease-in 250ms;
}
.footer .foot-item a:hover {
  color: white;
  background-color: black;
}

/* ---- 
Back End
---- */
.sidebar {
  display: block;
  position: fixed;
  z-index: 1;
  width: 250px;
  height: 100%;
  transform: translateX(-195px);
  transition: all ease-in-out 500ms;
}
#side-btn {
  cursor: pointer;
  float: right;
}

.sidebar .list-item {
  font-size: 18px;
  margin: 5px 25px;
  list-style: none;
}
.sidebar .list-item a {
  color: black;
  text-decoration: none;
}
.sidebar .list-item a:hover {
  color: #6c757d;
}
.sidebar i {
  width: 25px;
  margin: 0 10px;
}

.content {
  display: block;
  width: 94%;
  margin-left: 70px;
  transition: all ease-in-out 600ms;
}
.produk .table {
  width: 100%;
}
.produk .table td {
  vertical-align: middle;
}
.produk ul {
  display: none;
}

.cari-mobile {
  margin-top: 40px;
  position: relative;
  display: none;
  top: 8px;
}

.cari-mobile .my-2 {
  margin: 0 !important;
}

@media (max-width: 992.98px) {
  /* ---- 
Untuk Mobile
Front End
---- */
  * {
    font-size: 12px;
  }
  #icon:hover {
    color: #007bff;
  }
  .navbar {
    text-align: center;
  }
  .nav-item > .nav-link:hover {
    background-color: #f8f9fa;
  }
  .navbar-nav li:last-child {
    display: block;
  }
  /* .navbar .collapse .cari {
    display: none;
  } */

  /* .navbar .collapsing .cari {
    display: none;
  } */

  .cari-mobile {
    display: block;
  }

  .content {
    display: block;
    width: 90%;
    margin-left: 40px;
    transition: all ease-in-out 600ms;
  }
  .navbar-main {
    padding-left: 15px;
  }

  .logo-pos {
    display: none;
  }
  /* ---- 
Back End
---- */
  .sidebar {
    display: block;
    position: absolute;
    z-index: 1;
    width: 190px;
    height: 100%;
    transform: translateX(-160px);
    transition: all ease-in-out 600ms;
  }
  #side-btn {
    cursor: pointer;
    float: right;
  }
  .sidebar i {
    margin: 0 0;
    margin-right: -3px;
  }

  .produk .table {
    display: none;
  }
  .produk ul {
    display: block;
  }
}
@media (max-width: 420px) {
  .content {
    display: block;
    width: 85%;
    margin-left: 40px;
    transition: all ease-in-out 600ms;
  }
}

